alterado classe button para duas classes, whtbutton e bluebutton, ja estilizando as cores dos botoes e o hover no arquivo style.css, deixando para os arquivos css especificos somente a estilização do size width e height dos botoes. As mudanças foram aplicadas ao header e banner.

--- a/style.css
+++ b/style.css
@@ -10,11 +10,31 @@
   font-size: 62.5%;
 }
 
-.button {
+.whtbutton {
   background: none;
   border: 0.1rem solid var(--blue100);
   border-radius: 0;
+  color: var(--blue100);
   font-family: var(--pagefont);
   font-size: 1.4rem;
   font-weight: 600;
+}
+.whtbutton:hover {
+  background: var(--blue20);
+  cursor: pointer;
+}
+
+.bluebutton {
+  background: var(--blue100);
+  border: 0.1rem solid var(--blue100);
+  border-radius: 0;
+  color: var(--white);
+  font-family: var(--pagefont);
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.bluebutton:hover {
+  background: var(--blue80);
+  border: none;
+  cursor: pointer;
 }
