--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
 :root {
+  --blue10: #EAF2FD;
   --blue20: #D4E4FA;
   --blue80: #5595E9;
   --blue100: #2A7AE4;
   --black05: #F5F5F5;
+  --black30: #C8C8C8;
   --black50: #A2A2A2;
   --black100: #464646;
   --pagefont: 'Raleway', sans-serif;
   --white: #FFFFFF;
 
   font-size: 62.5%;
-}
-
-a {
-  text-decoration: none;
 }
 
 .whtbutton {
