adicionado ./ também nos links de imagens dos arquivos main-banner.css e main-gallery.css

--- a/css/main-gallery.css
+++ b/css/main-gallery.css
@@ -34,7 +34,7 @@
 
 .gallery__seeall--img {
   background: no-repeat center / cover;
-  background-image: url(/imgs/arrow.svg);
+  background-image: url(./imgs/arrow.svg);
 }
 
 .gallery__products {
