--- a/css/index-gallery.css
+++ b/css/index-gallery.css
@@ -35,7 +35,7 @@
 
 .gallery__seeall--img {
   background: no-repeat center / cover;
-  background-image: url(./imgs/arrow.svg);
+  background-image: url('../imgs/arrow.svg');
 }
 
 .gallery__products {
