alterado modo de renderizar header e footer. Criado arquivo html para cada um e criado scrip js para renderizar em cada pagina. Foi aterado também organização das pastas. Criado uma pasta assets para todas as imgs e css e js compartilhados, alem dos arquivos footer e header html. E foi criado uma pasta para cada pagina (adicionar, produto, produtos, home e login) com um arquivo index.html dentro

--- a/home/index-banner.css
+++ b/home/index-banner.css
@@ -23,7 +23,7 @@
 
 @media  screen and (min-width: 0) {
   .banner {
-    background-image: url('../imgs/bannermobile.png');
+    background-image: url('../assets/imgs/bannermobile.png');
     height: 19.2rem;
     padding: 1.6rem;
   }
@@ -46,7 +46,7 @@
 
 @media  screen and (min-width: 768px) {
   .banner {
-    background-image: url('../imgs/bannermobile.png');
+    background-image: url('../assets/imgs/bannermobile.png');
     height: 35.2rem;
     padding: 3.2rem;
   }
@@ -69,7 +69,7 @@
 
 @media  screen and (min-width: 1200px) {
   .banner {
-    background-image: url('../imgs/bannerdesktop.png');
+    background-image: url('../assets/imgs/bannerdesktop.png');
     height: 35.2rem;
     padding: 3.2rem 15.2rem;
   }
