--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,45 @@
-.galleries {
-  background: var(--black05);
-  display: flex;
-  flex-direction: column;
+:root {
+  --blue10: #EAF2FD;
+  --blue20: #D4E4FA;
+  --blue80: #5595E9;
+  --blue100: #2A7AE4;
+  --black05: #F5F5F5;
+  --black30: #C8C8C8;
+  --black50: #A2A2A2;
+  --black100: #464646;
+  --pagefont: 'Raleway', sans-serif;
+  --white: #FFFFFF;
+
+  font-size: 62.5%;
 }
 
-.gallery {
-  display: flex;
-  flex-direction: column;
-}
-
-.gallery__header {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-.gallery__title {
-  color: var(--black100);
+.bluebutton {
+  background: var(--blue100);
+  border: 0.1rem solid var(--blue100);
+  border-radius: 0;
+  color: var(--white);
   font-family: var(--pagefont);
-  font-size: 2.2rem;
-  font-weight: 700;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+.bluebutton:hover {
+  background: var(--blue80);
+  border: none;
+  cursor: pointer;
 }
 
-.gallery__seeall {
-  align-items: center;
-  display: flex;
-}
-
-.gallery__seeall--text {
+.whtbutton {
+  background: none;
+  border: 0.1rem solid var(--blue100);
+  border-radius: 0;
   color: var(--blue100);
   font-family: var(--pagefont);
-  font-weight: 700;
+  font-size: 1.4rem;
+  font-weight: 600;
 }
-
-.gallery__seeall--img {
-  background: no-repeat center / cover;
-  background-image: url('../imgs/arrow.svg');
-}
-
-.gallery__products {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: stretch;
+.whtbutton:hover {
+  background: var(--blue20);
+  cursor: pointer;
 }
 
 .gallery__product {
@@ -55,12 +53,16 @@
   width: 100%;
 }
 
-.gallery__product--description {
+.gallery__product--name {
   color: var(--black100);
+  flex-shrink: 0;
   font-family: var(--pagefont);
   font-size: 1.4rem;
   font-weight: 500;
   margin-bottom: 0.8rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .gallery__product--price {
@@ -78,22 +80,6 @@
 }
 
 @media  screen and (min-width: 0) {
-  .galleries {
-    padding: 0 1.6rem;
-  }
-  .gallery {
-    margin-top: 1.6rem;
-  }
-  .gallery__header {
-    margin-bottom: 1.6rem;
-  }
-  .gallery__seeall--text {
-    font-size: 1.4rem;
-  }
-  .gallery__seeall--img {
-    height: 1.6rem;
-    width: 1.6rem;
-  }
   .gallery__product {
     margin-bottom: 1.6rem;
     width: calc(50% - 0.8rem);
@@ -111,22 +97,6 @@
 }
 
 @media  screen and (min-width: 768px) {
-  .galleries {
-    padding: 0 3.2rem;
-  }
-  .gallery {
-    margin-top: 3.2rem;
-  }
-  .gallery__header {
-    margin-bottom: 1.6rem;
-  }
-  .gallery__seeall--text {
-    font-size: 1.6rem;
-  }
-  .gallery__seeall--img {
-    height: 2.4rem;
-    width: 2.4rem;
-  }
   .gallery__product {
     margin-bottom: 3.2rem;
     margin-right: 1.6rem;
@@ -147,22 +117,6 @@
 }
 
 @media  screen and (min-width: 1200px) {
-  .galleries {
-    padding: 0 15.2rem 6.4rem 15.2rem;
-  }
-  .gallery {
-    margin-top: 6.4rem;
-  }
-  .gallery__header {
-    margin-bottom: 1.6rem;
-  }
-  .gallery__seeall--text {
-    font-size: 1.6rem;
-  }
-  .gallery__seeall--img {
-    height: 2.4rem;
-    width: 2.4rem;
-  }
   .gallery__product {
     margin-bottom: 0;
     margin-right: 1.6rem;
