--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@
 
 @media  screen and (min-width: 1200px) {
   .gallery__product {
-    margin-bottom: 0;
+    margin-bottom: 6.4rem;
     margin-right: 1.6rem;
     width: calc( (100% - 8rem) / 6 );
   }
