--- a/produtoscategoria/prodscategory.css
+++ b/produtoscategoria/prodscategory.css
@@ -23,8 +23,8 @@
 
 @media  screen and (min-width: 0) {
   .prodscategory {
-    padding: 3.2rem;
-    padding-bottom: 1.6rem;
+    padding: 1.6rem;
+    padding-bottom: 0;
   }
   .prodscategory__header {
     flex-direction: column;
@@ -32,14 +32,13 @@
   }
   .prodscategory__title {
     font-size: 2.2rem;
-    margin-bottom: 1.6rem;
   }
 }
 
 @media  screen and (min-width: 768px) {
   .prodscategory {
     padding: 3.2rem;
-    padding-bottom: 1.6rem;
+    padding-bottom: 0;
   }
   .prodscategory__header {
     align-items: center;
@@ -48,7 +47,6 @@
   }
   .prodscategory__title {
     font-size: 2.2rem;
-    margin-bottom: 0;
   }
 }
 
@@ -62,6 +60,5 @@
   }
   .prodscategory__title {
     font-size: 3.2rem;
-    margin-bottom: 0;
   }
 }
