--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,10 @@
   font-weight: 700;
 }
 
+.hide {
+  display: none;
+}
+
 @media  screen and (min-width: 0) {
   .gallery__product {
     margin-bottom: 1.6rem;
