--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,3 +142,70 @@
     font-size: 1.6rem;
   }
 }
+
+
+/* Style - Search Page */
+.search {
+  background: var(--black05);
+  display: flex;
+  flex-direction: column;
+}
+
+.search__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search__title {
+  color: var(--black100);
+  font-family: var(--pagefont);
+  font-weight: 700;
+}
+
+.search__products {
+  align-items: stretch;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media  screen and (min-width: 0) {
+  .search {
+    padding: 1.6rem;
+    padding-bottom: 0;
+  }
+  .search__header {
+    flex-direction: column;
+    margin-bottom: 1.6rem;
+  }
+  .search__title {
+    font-size: 2.2rem;
+  }
+}
+
+@media  screen and (min-width: 768px) {
+  .search {
+    padding: 3.2rem;
+    padding-bottom: 0;
+  }
+  .search__header {
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 1.6rem;
+  }
+  .search__title {
+    font-size: 2.2rem;
+  }
+}
+
+@media  screen and (min-width: 1200px) {
+  .search {
+    padding: 6.4rem 15.2rem 0 15.2rem;
+  }
+  .search__header {
+    flex-direction: row;
+    margin-bottom: 1.6rem;
+  }
+  .search__title {
+    font-size: 3.2rem;
+  }
+}
